[gd_scene load_steps=13 format=2]

[ext_resource path="res://Utility/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Utility/SoftCollision.tscn" type="PackedScene" id=2]
[ext_resource path="res://Utility/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/white_box.png" type="Texture" id=4]
[ext_resource path="res://Resources/EyeDude.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=6]
[ext_resource path="res://Items/Weapons/EyeDudeRay.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=6]
radius = 13.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 14.0
height = 2.0

[sub_resource type="Animation" id=2]
resource_name = "Move"
length = 0.5
loop = true
step = 0.05

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="EyeDude" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 6 )
RUN_SPEED = 50
damage = 2
gravity = 30
projectile_range = 35
projectile_speed = 0
projectile_piercing = true
projectile_stationary = true
cooldown = 3.0
can_fly = true
can_pass_walls = true
enemy_name = "EyeDude"
projectile = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 5 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 6 )

[node name="HealthBar" type="TextureProgress" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -6.0
margin_top = -30.0
margin_right = 6.0
margin_bottom = -29.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.192157, 0.192157, 0.192157, 0.654902 )
tint_progress = Color( 0.701961, 0.0588235, 0.0588235, 0.831373 )
nine_patch_stretch = true

[node name="StunTimer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( 14, 0 )

[node name="SoftCollision" parent="." instance=ExtResource( 2 )]
visible = true
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
visible = false
position = Vector2( 0, -15 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]
visible = true
collision_layer = 0

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
visible = false

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
visible = true
collision_layer = 32

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Move"
anims/Move = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Shoot = SubResource( 7 )

[node name="ShootOrigin" type="Position2D" parent="."]
position = Vector2( 0, -16 )

[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="SoftCollision"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
